<resources>
    <string name="app_name">Employee Finder</string>
    <string name="attributes">Attributes</string>
    <string name="employees">Employees</string>
    <string name="map">Map</string>
    <string name="attribute_list">Attribute List</string>
    <string name="name">Name:</string>
    <string name="create_attribute">Create Attribute</string>
    <string name="ok">OK</string>
    <string name="edit_attribute">Edit Attribute</string>
    <string name="delete">Delete</string>
    <string name="employees_list">Employees List</string>
    <string name="create_employee">Create Employee</string>
    <string name="name_of_employee">Name of Employee</string>
    <string name="name_of_attribute">Name of Attribute</string>
    <string name="date_of_birth">Date Of Birth (dd/mm/yyyy)</string>
    <string name="driver_s_license">Driver\'s License:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home_address">Home Address (Street Number, City)</string>
    <string name="available_attributes">Available Attributes</string>
    <string name="edit_employee">Edit Employee</string>
    <string name="title_activity_maps">Map</string>
    <string name="cont">CONTINUE</string>
</resources>