<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activityCreateEmployee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/txtViewCreateEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/create_employee"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextEmployeeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewCreateEmployee"
        android:layout_margin="5dp"
        android:autofillHints="Name of Employee"
        android:hint="@string/name_of_employee"
        app:backgroundTint="@color/pressed_color"
        android:inputType="text" />


    <EditText
        android:id="@+id/editTextEmployeeDayOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmployeeName"
        android:layout_margin="5dp"
        android:autofillHints="Date Of Birth"
        android:hint="@string/date_of_birth"
        app:backgroundTint="@color/pressed_color"
        android:inputType="date" />

    <TextView
        android:id="@+id/txtViewDriversLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmployeeHomeAddress"
        android:layout_margin="5dp"
        android:text="@string/driver_s_license"
        app:backgroundTint="@color/pressed_color"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioGroupDriversLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmployeeHomeAddress"
        android:layout_margin="5dp"
        android:layout_toEndOf="@+id/txtViewDriversLicense"
        android:layout_toRightOf="@+id/txtViewDriversLicense"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/radioButtonNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />

    </RadioGroup>


    <EditText
        android:id="@+id/editTextEmployeeHomeAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmployeeDayOfBirth"
        android:layout_margin="5dp"
        android:autofillHints="Home Address"
        android:hint="@string/home_address"
        app:backgroundTint="@color/pressed_color"
        android:inputType="textPostalAddress" />

    <TextView

        android:id="@+id/headerList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupDriversLicense"
        android:layout_margin="10dp"
        android:text="@string/attributes" />

    <ListView
        android:id="@+id/listViewAttributeOfEmployee"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/headerList"

        />

    <TextView
        android:id="@+id/headerAvailableList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listViewAttributeOfEmployee"
        android:layout_margin="10dp"
        android:text="@string/available_attributes" />

    <ListView
        android:id="@+id/listViewAvailableAttributesOfEmployee"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/headerAvailableList" />

    <Button
        android:id="@+id/btnCreateOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listViewAvailableAttributesOfEmployee"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:text="@string/ok"
        android:textSize="20sp" />


</RelativeLayout>