<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/txtViewCreateAttribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/edit_attribute"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextEditAttributeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewCreateAttribute"
        android:layout_margin="30sp"
        android:autofillHints="Name of Attribute"
        app:backgroundTint="@color/pressed_color"
        android:hint="@string/name_of_attribute"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEditAttributeName"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/btnEditOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textSize="20sp"

            />

        <Button
            android:id="@+id/btnEditDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textSize="20sp" />


    </LinearLayout>


</RelativeLayout>