<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activityCreateAttribute"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/txtViewCreateAttribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/create_attribute"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextAttributeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewCreateAttribute"
        android:layout_margin="30sp"
        android:autofillHints="Name of Attribute"
        android:hint="@string/name_of_attribute"
        app:backgroundTint="@color/pressed_color"
        android:inputType="text" />

    <Button
        android:id="@+id/btnCreateOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextAttributeName"
        android:layout_centerInParent="true"
        android:text="@string/ok"
        android:textSize="20sp"

        />

</RelativeLayout>