<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10">

        <Button
            android:id="@+id/btnAttributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:background="@color/pressed_color"
            android:textStyle="bold"
            android:textColor="@color/default_color"
            android:text="@string/attributes" />

        <Button
            android:id="@+id/btnEmployees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:background="@color/pressed_color"
            android:textStyle="bold"
            android:textColor="@color/default_color"
            android:text="@string/employees" />

        <Button
            android:id="@+id/btnMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:background="@color/pressed_color"
            android:textStyle="bold"
            android:textColor="@color/default_color"
            android:text="@string/map" />

    </LinearLayout>
</RelativeLayout>